--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -25,19 +25,19 @@
   <meta name="theme-name" content="classimax" />
 
   <!-- favicon -->
-  <link href="images/favicon.png" rel="shortcut icon">
+  <link href="/../assets/favicon.png" rel="shortcut icon">
 
   <!-- 
   Essential stylesheets
   =====================================-->
-  <link href="plugins/bootstrap/bootstrap.min.css" rel="stylesheet">
-  <link href="plugins/bootstrap/bootstrap-slider.css" rel="stylesheet">
-  <link href="plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-  <link href="plugins/slick/slick.css" rel="stylesheet">
-  <link href="plugins/slick/slick-theme.css" rel="stylesheet">
-  <link href="plugins/jquery-nice-select/css/nice-select.css" rel="stylesheet">
+  <link href="/../assets/bootstrap/bootstrap.min.css" rel="stylesheet">
+  <link href="/../assets/bootstrap/bootstrap-slider.css" rel="stylesheet">
+  <link href="/../assets/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+  <link href="/../assets/slick/slick.css" rel="stylesheet">
+  <link href="/../assets/slick/slick-theme.css" rel="stylesheet">
+  <link href="/../assets/jquery-nice-select/css/nice-select.css" rel="stylesheet">
   
-  <link href="css/style.css" rel="stylesheet">
+  <link href="/../assets/css/style.css" rel="stylesheet">
 
 </head>
 
@@ -50,7 +50,7 @@
 			<div class="col-md-12">
 				<nav class="navbar navbar-expand-lg navbar-light navigation">
 					<a class="navbar-brand" href="index.html">
-						<img src="images/logo.png" alt="">
+						<img src="../assets/logo.png" alt="">
 					</a>
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
 					 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -233,7 +233,7 @@
 		<div class="thumb-content">
 			<!-- <div class="price">$200</div> -->
 			<a href="single.html">
-				<img class="card-img-top img-fluid" src="images/products/products-1.jpg" alt="Card image cap">
+				<img class="card-img-top img-fluid" src="/../assets/products/products-1.jpg" alt="Card image cap">
 			</a>
 		</div>
 		<div class="card-body">
@@ -270,7 +270,7 @@
 		<div class="thumb-content">
 			<!-- <div class="price">$200</div> -->
 			<a href="single.html">
-				<img class="card-img-top img-fluid" src="images/products/products-2.jpg" alt="Card image cap">
+				<img class="card-img-top img-fluid" src="/../assets/products/products-2.jpg" alt="Card image cap">
 			</a>
 		</div>
 		<div class="card-body">
@@ -307,7 +307,7 @@
 		<div class="thumb-content">
 			<!-- <div class="price">$200</div> -->
 			<a href="single.html">
-				<img class="card-img-top img-fluid" src="images/products/products-3.jpg" alt="Card image cap">
+				<img class="card-img-top img-fluid" src="/../assets/products/products-3.jpg" alt="Card image cap">
 			</a>
 		</div>
 		<div class="card-body">
@@ -344,7 +344,7 @@
 		<div class="thumb-content">
 			<!-- <div class="price">$200</div> -->
 			<a href="single.html">
-				<img class="card-img-top img-fluid" src="images/products/products-2.jpg" alt="Card image cap">
+				<img class="card-img-top img-fluid" src="/../assets/products/products-2.jpg" alt="Card image cap">
 			</a>
 		</div>
 		<div class="card-body">
@@ -563,7 +563,7 @@
         <!-- About -->
         <div class="block about">
           <!-- footer logo -->
-          <img src="images/logo-footer.png" alt="logo">
+          <img src="/../assets/logo-footer.png" alt="logo">
           <!-- description -->
           <p class="alt-color">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
             incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
@@ -607,13 +607,13 @@
           <div class="mobile d-flex  align-items-center">
             <a href="index.html">
               <!-- Icon -->
-              <img src="images/footer/phone-icon.png" alt="mobile-icon">
+              <img src="/../assets/footer/phone-icon.png" alt="mobile-icon">
             </a>
             <p class="mb-0">Get the Dealsy Mobile App and Save more</p>
           </div>
           <div class="download-btn d-flex my-3">
-            <a href="index.html"><img src="images/apps/google-play-store.png" class="img-fluid" alt=""></a>
-            <a href="index.html" class=" ml-3"><img src="images/apps/apple-app-store.png" class="img-fluid" alt=""></a>
+            <a href="index.html"><img src="/../assets/apps/google-play-store.png" class="img-fluid" alt=""></a>
+            <a href="index.html" class=" ml-3"><img src="/../assets/apps/apple-app-store.png" class="img-fluid" alt=""></a>
           </div>
         </div>
       </div>
@@ -656,19 +656,19 @@
 <!-- 
 Essential Scripts
 =====================================-->
-<script src="plugins/jquery/jquery.min.js"></script>
-<script src="plugins/bootstrap/popper.min.js"></script>
-<script src="plugins/bootstrap/bootstrap.min.js"></script>
-<script src="plugins/bootstrap/bootstrap-slider.js"></script>
-<script src="plugins/tether/js/tether.min.js"></script>
-<script src="plugins/raty/jquery.raty-fa.js"></script>
-<script src="plugins/slick/slick.min.js"></script>
-<script src="plugins/jquery-nice-select/js/jquery.nice-select.min.js"></script>
+<script src="/../assets/jquery/jquery.min.js"></script>
+<script src="/../assets/bootstrap/popper.min.js"></script>
+<script src="/../assets/bootstrap/bootstrap.min.js"></script>
+<script src="/../assets/bootstrap/bootstrap-slider.js"></script>
+<script src="/../assets/tether/js/tether.min.js"></script>
+<script src="/../assets/raty/jquery.raty-fa.js"></script>
+<script src="/../assets/slick/slick.min.js"></script>
+<script src="/../assets/jquery-nice-select/js/jquery.nice-select.min.js"></script>
 <!-- google map -->
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCcABaamniA6OL5YvYSpB3pFMNrXwXnLwU" defer></script>
-<script src="plugins/google-map/map.js" defer></script>
+<script src="/../assets/google-map/map.js" defer></script>
 
-<script src="js/script.js"></script>
+<script src="/../assets/script.js"></script>
 
 </body>
 
