--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -49,7 +49,7 @@
 		<div class="row">
 			<div class="col-md-12">
 				<nav class="navbar navbar-expand-lg navbar-light navigation">
-					<a class="navbar-brand" href="index.html">
+					<a class="navbar-brand" href="/welcome">
 						<img src="../assets/logo.png" alt="">
 					</a>
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -59,7 +59,7 @@
 					<div class="collapse navbar-collapse" id="navbarSupportedContent">
 						<ul class="navbar-nav ml-auto main-nav ">
 							<li class="nav-item active">
-								<a class="nav-link" href="index.html">Home</a>
+								<a class="nav-link" href="/welcome">Home</a>
 							</li>
 							<li class="nav-item dropdown dropdown-slide @@dashboard">
 								<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#!">Dashboard<span><i class="fa fa-angle-down"></i></span>
@@ -77,8 +77,8 @@
 										<a class="dropdown-item dropdown-toggle" href="#!" id="dropdown0501" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Sub Menu</a>
 					
 										<ul class="dropdown-menu" aria-labelledby="dropdown0501">
-											<li><a class="dropdown-item" href="index.html">Submenu 01</a></li>
-											<li><a class="dropdown-item" href="index.html">Submenu 02</a></li>
+											<li><a class="dropdown-item" href="/welcome">Submenu 01</a></li>
+											<li><a class="dropdown-item" href="/welcome">Submenu 02</a></li>
 										</ul>
 									</li>
 								</ul>
@@ -114,8 +114,8 @@
 										<a class="dropdown-item dropdown-toggle" href="#!" id="dropdown0201" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Sub Menu</a>
 					
 										<ul class="dropdown-menu" aria-labelledby="dropdown0201">
-											<li><a class="dropdown-item" href="index.html">Submenu 01</a></li>
-											<li><a class="dropdown-item" href="index.html">Submenu 02</a></li>
+											<li><a class="dropdown-item" href="/welcome">Submenu 01</a></li>
+											<li><a class="dropdown-item" href="/welcome">Submenu 02</a></li>
 										</ul>
 									</li>
 								</ul>
@@ -123,7 +123,7 @@
 						</ul>
 						<ul class="navbar-nav ml-auto mt-10">
 							<li class="nav-item">
-								<a class="nav-link login-button" href="login.html">Login</a>
+								<a class="nav-link login-button" href="/login">Login</a>
 							</li>
 							<li class="nav-item">
 								<a class="nav-link text-white add-button" href="ad-listing.html"><i class="fa fa-plus-circle"></i> Add Listing</a>
@@ -605,15 +605,15 @@
         <!-- App promotion -->
         <div class="block-2 app-promotion">
           <div class="mobile d-flex  align-items-center">
-            <a href="index.html">
+            <a href="/welcome">
               <!-- Icon -->
               <img src="/../assets/footer/phone-icon.png" alt="mobile-icon">
             </a>
             <p class="mb-0">Get the Dealsy Mobile App and Save more</p>
           </div>
           <div class="download-btn d-flex my-3">
-            <a href="index.html"><img src="/../assets/apps/google-play-store.png" class="img-fluid" alt=""></a>
-            <a href="index.html" class=" ml-3"><img src="/../assets/apps/apple-app-store.png" class="img-fluid" alt=""></a>
+            <a href="/welcome"><img src="/../assets/apps/google-play-store.png" class="img-fluid" alt=""></a>
+            <a href="/welcome" class=" ml-3"><img src="/../assets/apps/apple-app-store.png" class="img-fluid" alt=""></a>
           </div>
         </div>
       </div>
