--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -121,14 +121,23 @@
 								</ul>
 							</li>
 						</ul>
-						<ul class="navbar-nav ml-auto mt-10">
-							<li class="nav-item">
-								<a class="nav-link login-button" href="/login">Login</a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link text-white add-button" href="ad-listing.html"><i class="fa fa-plus-circle"></i> Add Listing</a>
-							</li>
-						</ul>
+              <ul class="navbar-nav ml-auto mt-10">
+                <% if logged_in? %>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      <%= current_user.name %> <i class="fa fa-angle-down"></i>
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                      <%= link_to 'Profile', profile_path, class: 'dropdown-item' %> 
+                      <%= link_to 'Logout', logout_path, method: :delete, class: 'dropdown-item' %>
+                    </div>
+                  </li>
+                <% else %>
+                  <li class="nav-item">
+                    <%= link_to 'Login', login_path, class: 'nav-link login-button' %>
+                  </li>
+                <% end %>
+              </ul>
 					</div>
 				</nav>
 			</div>
