--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -238,17 +238,17 @@
                 <div class="card">
                   <div class="thumb-content">
                     <a href="single.html">
-                      <img class="card-img-top img-fluid" src="<%= event_list.URL %>" alt="Card image cap">
+                      <img class="card-img-top img-fluid" src="<%= event_list.url %>" alt="Card image cap">
                     </a>
                   </div>
                   <div class="card-body">
-                    <h4 class="card-title"><a href="single.html"><%= event_list.EventName %></a></h4>
+                    <h4 class="card-title"><a href="single.html"><%= event_list.event_name %></a></h4>
                     <ul class="list-inline product-meta">
                       <li class="list-inline-item">
-                        <a href="single.html"><i class="fa fa-folder-open-o"></i><%= event_list.Category %></a>
+                        <a href="single.html"><i class="fa fa-folder-open-o"></i><%= event_list.category %></a>
                       </li>
                       <li class="list-inline-item">
-                        <a href="category.html"><i class="fa fa-calendar"></i><%= event_list.StartDate %></a>
+                        <a href="category.html"><i class="fa fa-calendar"></i><%= event_list.start_date %></a>
                       </li>
                     </ul>
                   </div>
