--- a/app/views/profile/index.html.erb
+++ b/app/views/profile/index.html.erb
@@ -25,7 +25,7 @@
   <meta name="theme-name" content="classimax" />
 
   <!-- favicon -->
-  <link href="images/favicon.png" rel="shortcut icon">
+  <link href="/../assets/favicon.png" rel="shortcut icon">
 
   <!-- 
   Essential stylesheets
@@ -43,13 +43,14 @@
 
 <body class="body-wrapper">
 
+
 <header>
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12">
 				<nav class="navbar navbar-expand-lg navbar-light navigation">
-					<a class="navbar-brand" href="index.html">
-						<img src="images/logo.png" alt="">
+					<a class="navbar-brand" href="/welcome">
+						<img src="../assets/logo.png" alt="">
 					</a>
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
 					 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -57,27 +58,27 @@
 					</button>
 					<div class="collapse navbar-collapse" id="navbarSupportedContent">
 						<ul class="navbar-nav ml-auto main-nav ">
-							<li class="nav-item @@home">
-								<a class="nav-link" href="index.html">Home</a>
+							<li class="nav-item active">
+								<a class="nav-link" href="/welcome">Home</a>
 							</li>
-							<li class="nav-item dropdown dropdown-slide active">
+							<li class="nav-item dropdown dropdown-slide @@dashboard">
 								<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#!">Dashboard<span><i class="fa fa-angle-down"></i></span>
 								</a>
 
 								<!-- Dropdown list -->
 								<ul class="dropdown-menu">
-									<li><a class="dropdown-item active" href="dashboard.html">Dashboard</a></li>
-									<li><a class="dropdown-item activeMyAds" href="dashboard-my-ads.html">Dashboard My Ads</a></li>
-									<li><a class="dropdown-item activeFavouriteAds" href="dashboard-favourite-ads.html">Dashboard Favourite Ads</a></li>
-									<li><a class="dropdown-item activeArchivedAds" href="dashboard-archived-ads.html">Dashboard Archived Ads</a></li>
-									<li><a class="dropdown-item activePendingAds" href="dashboard-pending-ads.html">Dashboard Pending Ads</a></li>
+									<li><a class="dropdown-item @@dashboardPage" href="dashboard.html">Dashboard</a></li>
+									<li><a class="dropdown-item @@dashboardMyAds" href="dashboard-my-ads.html">Dashboard My Ads</a></li>
+									<li><a class="dropdown-item @@dashboardFavouriteAds" href="dashboard-favourite-ads.html">Dashboard Favourite Ads</a></li>
+									<li><a class="dropdown-item @@dashboardArchivedAds" href="dashboard-archived-ads.html">Dashboard Archived Ads</a></li>
+									<li><a class="dropdown-item @@dashboardPendingAds" href="dashboard-pending-ads.html">Dashboard Pending Ads</a></li>
 									
 									<li class="dropdown dropdown-submenu dropright">
 										<a class="dropdown-item dropdown-toggle" href="#!" id="dropdown0501" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Sub Menu</a>
 					
 										<ul class="dropdown-menu" aria-labelledby="dropdown0501">
-											<li><a class="dropdown-item" href="index.html">Submenu 01</a></li>
-											<li><a class="dropdown-item" href="index.html">Submenu 02</a></li>
+											<li><a class="dropdown-item" href="/welcome">Submenu 01</a></li>
+											<li><a class="dropdown-item" href="/welcome">Submenu 02</a></li>
 										</ul>
 									</li>
 								</ul>
@@ -113,22 +114,30 @@
 										<a class="dropdown-item dropdown-toggle" href="#!" id="dropdown0201" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Sub Menu</a>
 					
 										<ul class="dropdown-menu" aria-labelledby="dropdown0201">
-											<li><a class="dropdown-item" href="index.html">Submenu 01</a></li>
-											<li><a class="dropdown-item" href="index.html">Submenu 02</a></li>
+											<li><a class="dropdown-item" href="/welcome">Submenu 01</a></li>
+											<li><a class="dropdown-item" href="/welcome">Submenu 02</a></li>
 										</ul>
 									</li>
 								</ul>
 							</li>
 						</ul>
-						<ul class="navbar-nav ml-auto mt-10">
-							<li class="nav-item">
-								<a class="nav-link login-button" href="login.html">Login</a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link text-white add-button" href="ad-listing.html"><i class="fa fa-plus-circle"></i> Add Listing</a>
-							</li>
-						</ul>
-					</div>
+              <ul class="navbar-nav ml-auto mt-10">
+                <% if logged_in? %>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      <%= current_user.name %> <i class="fa fa-angle-down"></i>
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                      <%= link_to 'Profile', profile_path, class: 'dropdown-item' %> 
+                      <%= link_to 'Logout', logout_path, method: :delete, class: 'dropdown-item' %>
+                    </div>
+                  </li>
+                <% else %>
+                  <li class="nav-item">
+                    <%= link_to 'Login', login_path, class: 'nav-link login-button' %>
+                  </li>
+                <% end %>
+              </ul>
 				</nav>
 			</div>
 		</div>
