--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -43,7 +43,6 @@
 
 <body class="body-wrapper">
 
-
 <header>
 	<div class="container">
 		<div class="row">
@@ -67,20 +66,7 @@
 
 								<!-- Dropdown list -->
 								<ul class="dropdown-menu">
-									<li><a class="dropdown-item @@dashboardPage" href="dashboard.html">Dashboard</a></li>
-									<li><a class="dropdown-item @@dashboardMyAds" href="dashboard-my-ads.html">Dashboard My Ads</a></li>
-									<li><a class="dropdown-item @@dashboardFavouriteAds" href="dashboard-favourite-ads.html">Dashboard Favourite Ads</a></li>
-									<li><a class="dropdown-item @@dashboardArchivedAds" href="dashboard-archived-ads.html">Dashboard Archived Ads</a></li>
-									<li><a class="dropdown-item @@dashboardPendingAds" href="dashboard-pending-ads.html">Dashboard Pending Ads</a></li>
-									
-									<li class="dropdown dropdown-submenu dropright">
-										<a class="dropdown-item dropdown-toggle" href="#!" id="dropdown0501" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Sub Menu</a>
-					
-										<ul class="dropdown-menu" aria-labelledby="dropdown0501">
-											<li><a class="dropdown-item" href="/welcome">Submenu 01</a></li>
-											<li><a class="dropdown-item" href="/welcome">Submenu 02</a></li>
-										</ul>
-									</li>
+									<li><a class="dropdown-item @@dashboardPage" href="/posts">Dashboard</a></li>
 								</ul>
 							</li>
 							<li class="nav-item dropdown dropdown-slide @@pages">
@@ -89,16 +75,9 @@
 								</a>
 								<!-- Dropdown list -->
 								<ul class="dropdown-menu">
-									<li><a class="dropdown-item @@about" href="about-us.html">About Us</a></li>
 									<li><a class="dropdown-item @@contact" href="contact-us.html">Contact Us</a></li>
-									<li><a class="dropdown-item @@profile" href="user-profile.html">User Profile</a></li>
 									<li><a class="dropdown-item @@404" href="404.html">404 Page</a></li>
-									<li><a class="dropdown-item @@package" href="package.html">Package</a></li>
 									<li><a class="dropdown-item @@singlePage" href="single.html">Single Page</a></li>
-									<li><a class="dropdown-item @@store" href="store.html">Store Single</a></li>
-									<li><a class="dropdown-item @@blog" href="blog.html">Blog</a></li>
-									<li><a class="dropdown-item @@singleBlog" href="single-blog.html">Blog Details</a></li>
-									<li><a class="dropdown-item @@terms" href="terms-condition.html">Terms &amp; Conditions</a></li>
 								</ul>
 							</li>
 							<li class="nav-item dropdown dropdown-slide @@listing">
@@ -107,17 +86,7 @@
 								</a>
 								<!-- Dropdown list -->
 								<ul class="dropdown-menu">
-									<li><a class="dropdown-item @@category" href="category.html">Ad-Gird View</a></li>
 									<li><a class="dropdown-item @@listView" href="ad-list-view.html">Ad-List View</a></li>
-									
-									<li class="dropdown dropdown-submenu dropleft">
-										<a class="dropdown-item dropdown-toggle" href="#!" id="dropdown0201" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Sub Menu</a>
-					
-										<ul class="dropdown-menu" aria-labelledby="dropdown0201">
-											<li><a class="dropdown-item" href="/welcome">Submenu 01</a></li>
-											<li><a class="dropdown-item" href="/welcome">Submenu 02</a></li>
-										</ul>
-									</li>
 								</ul>
 							</li>
 						</ul>
@@ -250,6 +219,7 @@
                         <a href="category.html"><i class="fa fa-calendar"></i><%= event_list.start_date %></a>
                       </li>
                     </ul>
+                    <td><%= render "favorites/btn", post: event_list %></td>
                   </div>
                 </div>
               </div>
