--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -44,73 +44,53 @@
 <body class="body-wrapper">
 
 <header>
-	<div class="container">
-		<div class="row">
-			<div class="col-md-12">
-				<nav class="navbar navbar-expand-lg navbar-light navigation">
-					<a class="navbar-brand" href="/welcome">
-						<img src="../assets/logo.png" alt="">
-					</a>
-					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-					 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-						<span class="navbar-toggler-icon"></span>
-					</button>
-					<div class="collapse navbar-collapse" id="navbarSupportedContent">
-						<ul class="navbar-nav ml-auto main-nav ">
-							<li class="nav-item active">
-								<a class="nav-link" href="/welcome">Home</a>
-							</li>
-							<li class="nav-item dropdown dropdown-slide @@dashboard">
-								<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#!">Dashboard<span><i class="fa fa-angle-down"></i></span>
-								</a>
-
-								<!-- Dropdown list -->
-								<ul class="dropdown-menu">
-									<li><a class="dropdown-item @@dashboardPage" href="/posts">Dashboard</a></li>
-								</ul>
-							</li>
-							<li class="nav-item dropdown dropdown-slide @@pages">
-								<a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-									Pages <span><i class="fa fa-angle-down"></i></span>
-								</a>
-								<!-- Dropdown list -->
-								<ul class="dropdown-menu">
-									<li><a class="dropdown-item @@contact" href="contact-us.html">Contact Us</a></li>
-									<li><a class="dropdown-item @@404" href="404.html">404 Page</a></li>
-									<li><a class="dropdown-item @@singlePage" href="single.html">Single Page</a></li>
-								</ul>
-							</li>
-							<li class="nav-item dropdown dropdown-slide @@listing">
-								<a class="nav-link dropdown-toggle" href="#!" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-									Listing <span><i class="fa fa-angle-down"></i></span>
-								</a>
-								<!-- Dropdown list -->
-								<ul class="dropdown-menu">
-									<li><a class="dropdown-item @@listView" href="ad-list-view.html">Ad-List View</a></li>
-								</ul>
-							</li>
-						</ul>
-              <ul class="navbar-nav ml-auto mt-10">
-                <% if logged_in? %>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      <%= current_user.name %> <i class="fa fa-angle-down"></i>
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <%= link_to 'Profile', profile_path, class: 'dropdown-item' %> 
-                      <%= link_to 'Logout', logout_path, method: :delete, class: 'dropdown-item' %>
-                    </div>
-                  </li>
-                <% else %>
-                  <li class="nav-item">
-                    <%= link_to 'Login', login_path, class: 'nav-link login-button' %>
-                  </li>
-                <% end %>
-              </ul>
-				</nav>
-			</div>
-		</div>
-	</div>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <nav class="navbar navbar-expand-lg navbar-light navigation">
+          <a class="navbar-brand" href="index.html">
+            <img src="images/logo.png" alt="">
+          </a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ml-auto main-nav ">
+              <li class="nav-item active">
+                <a class="nav-link" href="/welcome">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./dashboard.html">Post
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/posts">Events
+                </a>
+              </li>
+            </ul>
+            <ul class="navbar-nav ml-auto mt-10">
+              <% if logged_in? %>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <%= current_user.name %> <i class="fa fa-angle-down"></i>
+                  </a>
+                  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <%= link_to 'Profile', profile_path, class: 'dropdown-item' %> 
+                    <%= link_to 'Logout', logout_path, method: :delete, class: 'dropdown-item' %>
+                  </div>
+                </li>
+              <% else %>
+                <li class="nav-item">
+                  <%= link_to 'Login', login_path, class: 'nav-link login-button' %>
+                </li>
+              <% end %>
+            </ul>
+          </div>
+        </nav>
+      </div>
+    </div>
+  </div>
 </header>
 
 <!--===============================
