--- a/app/views/profile/index.html.erb
+++ b/app/views/profile/index.html.erb
@@ -62,7 +62,7 @@
                 <a class="nav-link" href="/welcome">Home</a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link" href="./dashboard.html">Post
+                <a class="nav-link" href="/newpost">Post
                 </a>
               </li>
               <li class="nav-item">
