--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -8,7 +8,7 @@
 -->
 
 <html lang="en">
-<head>
+<head>   
 
   <!-- ** Basic Page Needs ** -->
   <meta charset="utf-8">
@@ -26,6 +26,7 @@
 
   <!-- favicon -->
   <link href="/../assets/favicon.png" rel="shortcut icon">
+  <meta name="csrf-token" content="<%= form_authenticity_token %>">
 
   <!-- 
   Essential stylesheets
@@ -38,11 +39,11 @@
   <link href="/../assets/jquery-nice-select/css/nice-select.css" rel="stylesheet">
   
   <link href="/../assets/css/style.css" rel="stylesheet">
+  <link href="/../assets/post.css" rel="stylesheet">
 
 </head>
 
 <body class="body-wrapper">
-
 
 <header>
   <div class="container">
@@ -58,14 +59,14 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto main-nav ">
-              <li class="nav-item">
+              <li class="nav-item active">
                 <a class="nav-link" href="/welcome">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/newpost">Post
                 </a>
               </li>
-              <li class="nav-item active">
+              <li class="nav-item">
                 <a class="nav-link" href="/posts">Events
                 </a>
               </li>
@@ -93,114 +94,45 @@
     </div>
   </div>
 </header>
-<!--==================================
-=            User Profile            =
-===================================-->
-<section class="dashboard section">
-  <!-- Container Start -->
-  <div class="container">
-    <!-- Row Start -->
-    <div class="row">
-      <div class="col-lg-4">
-        <div class="sidebar">
-          <!-- Filter Widget -->
-          <div class="widget user-dashboard-menu">
-            <h3 class="widget-header">Filter by</h3>
-            <ul>
-              <li>
-                <a href="<%= posts_path %>"><i class="fa fa-angle-right"></i> All Posts</a>
-              </li>
-            <% @categories.each do |category, count| %>
-              <li>
-                <a href="<%= posts_path(category: category) %>"><i class="fa fa-angle-right"></i> <%= category %> (<%= count %>)</a>
-              </li>
-            <% end %>
-            </ul>
-            <h3 class="widget-header">Location</h3>
-            <ul>
-            <% @location.each do |location, count| %>
-              <li>
-                <a href="<%= posts_path(location: location) %>"><i class="fa fa-angle-right"></i> <%= location %> (<%= count %>)</a>
-              </li>
-            <% end %>
-            </ul>
-          </div>
 
-          <!-- delete-account modal -->
-          <!-- delete account popup modal start-->
-<!-- Modal -->
-<div class="modal fade" id="deleteaccount" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
-  aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered" role="document">
-    <div class="modal-content">
-      <div class="modal-header border-bottom-0">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body text-center">
-        <img src="images/account/Account1.png" class="img-fluid mb-2" alt="">
-        <h6 class="py-2">Are you sure you want to delete your account?</h6>
-        <p>Do you really want to delete these records? This process cannot be undone.</p>
-        <textarea class="form-control" name="message" id="" cols="40" rows="4" class="w-100 rounded"></textarea>
-      </div>
-      <div class="modal-footer border-top-0 mb-3 mx-5 justify-content-center">
-        <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
-        <button type="button" class="btn btn-danger">Delete</button>
-      </div>
-    </div>
+  <div class="post-btn-area">
+    <h2 class="form-title">Post Event</h2>
   </div>
-</div>
-<!-- delete account popup modal end-->
-          <!-- delete-account modal -->
 
+  <ul id="progressbar" class="progressbar">
+    <li class="active">イベント情報</li>
+    <li class="">日程情報</li>
+    <li>住所情報</li>
+    <li>料金情報</li>
+    <li>主催者情報</li>
+    <li>その他</li>
+  </ul>
+
+    <form id="form-area" class="form-area">
+    <div id="f1" class="f1">
+        <h3 class="form-item">イベント情報</h3>
+        <div class="detail-form">
+        <label for="municipality-name">市町村名</label><br><input type="text" name="municipality_name"><br>
+        <label for="event-name">イベント名</label><br><input type="text" name="event_name"><br>
+        <label for="event-name-kana">イベント名(カナ)</label><br><input type="text" name="event_name_kana"><br>
+        <label for="event-name-english">イベント名(英語)</label><br><input type="text" name="event_name_english"><br>
+        <label for="category">カテゴリー</label><br>
+        <select class="select" name="category">
+            <option>イベント</option>
+            <option>おしらせ</option>
+            <option>おんがく</option>
+            <option>講座・教室</option>
+            <option>こそだて</option>
+            <option>職員募集</option>
+            <option>スポーツ</option>
+            <option>そうだん</option>
+        </select><br>
+        <label for="district">地区</label><br><input type="text" name="district"><br>
+        <label for="event-details">イベント詳細</label><br><textarea name="event_details"></textarea><br>
         </div>
-      </div>
-      <div class="col-lg-8">
-        <!-- Recently Favorited -->
-        <div class="widget dashboard-container my-adslist">
-          <h3 class="widget-header">イベント一覧</h3>
-          <table class="table table-responsive product-dashboard-table">
-            <thead>
-              <tr>
-                <th></th>
-                <th>イベント名</th>
-                <th class="text-center">カテゴリー</th>
-                <th class="text-center">いいね</th>
-              </tr>
-            </thead>
-            <tbody>
-              <% @event_lists.each do |post| %>
-              <tr>
-                <td class="product-thumb">
-                  <img width="80px" height="auto"  alt="image description"></td>
-                <td class="product-details">
-                  <h3 class="title"><%= post.event_name %></h3>
-                  <span class="add-id"><strong>Ad ID:</strong> <%= post.id %></span>
-                  <span><strong>Posted on: </strong><time><%= post.created_at.strftime('%b %d, %Y') %></time> </span>
-                  <span class="location"><strong>Location</strong><%= post.district %></span>
-                </td>
-                <td class="product-category"><span class="categories"><%= post.category %></span></td>
-                <td class="action" data-title="Action">
-                  <%= render "favorites/btn", post: post %>
-                </td>
-              </tr>
-              <% end %>
-            </tbody>
-          </table>
-
-        </div>
-
-        <!-- pagination -->
-        <%= will_paginate @event_lists, renderer: BootstrapPagination::Rails %>
-        <!-- pagination -->
-
-      </div>
     </div>
-    <!-- Row End -->
-  </div>
-  <!-- Container End -->
-</section>
+    <button id="next-btn1" class="next-btn btn-main font-weight-bold mt-3" onclick="moveTonextQ(1)">次へ</button>
+    </form>
 
 <!--============================
 =            Footer            =
@@ -214,7 +146,7 @@
         <!-- About -->
         <div class="block about">
           <!-- footer logo -->
-          <img src="images/logo-footer.png" alt="logo">
+          <img src="/../assets/logo-footer.png" alt="logo">
           <!-- description -->
           <p class="alt-color">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
             incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
@@ -256,15 +188,15 @@
         <!-- App promotion -->
         <div class="block-2 app-promotion">
           <div class="mobile d-flex  align-items-center">
-            <a href="index.html">
+            <a href="/welcome">
               <!-- Icon -->
-              <img src="images/footer/phone-icon.png" alt="mobile-icon">
+              <img src="/../assets/footer/phone-icon.png" alt="mobile-icon">
             </a>
             <p class="mb-0">Get the Dealsy Mobile App and Save more</p>
           </div>
           <div class="download-btn d-flex my-3">
-            <a href="index.html"><img src="images/apps/google-play-store.png" class="img-fluid" alt=""></a>
-            <a href="index.html" class=" ml-3"><img src="images/apps/apple-app-store.png" class="img-fluid" alt=""></a>
+            <a href="/welcome"><img src="/../assets/apps/google-play-store.png" class="img-fluid" alt=""></a>
+            <a href="/welcome" class=" ml-3"><img src="/../assets/apps/apple-app-store.png" class="img-fluid" alt=""></a>
           </div>
         </div>
       </div>
@@ -319,8 +251,15 @@ Essential Scripts
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCcABaamniA6OL5YvYSpB3pFMNrXwXnLwU" defer></script>
 <script src="/../assets/google-map/map.js" defer></script>
 
-<script src="/../assets/script.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/fetch-jsonp@1.1.3/build/fetch-jsonp.min.js"></script>
+<script type="text/javascript" src="js/jquery.zip2addr.js"></script>
+<script src="/../assets/post/post.js"></script>
+<script src="/../assets/post/script.js"></script>
+
 
 </body>
 
 </html>
+
+
+
