--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -225,6 +225,11 @@
   <!-- Container End -->
 </section>
 
+<div class="widget map">
+  <div class="map">
+    <div id="map" data-latitude="34.7034" data-longitude="137.7348"></div>
+  </div>
+</div>
 
 <!-- 
 Essential Scripts
