--- a/app/views/profile/new.html.erb
+++ b/app/views/profile/new.html.erb
@@ -101,6 +101,7 @@
           <h3 class="bg-gray p-4">Register Now</h3>
           <%= form_for User.new, url: {action: "create"} do |f| %>
             <fieldset class="p-4">
+              <%= f.text_field :name, class: 'form-control mb-3', placeholder: 'Name*', required: true %>
               <%= f.email_field :email, class: 'form-control mb-3', placeholder: 'Email*', required: true %>
               <%= f.password_field :password, class: 'form-control mb-3', placeholder: 'Password*', required: true %>
               <%= f.password_field :password_confirmation, class: 'form-control mb-3', placeholder: 'Confirm Password*', required: true %>
