ユーザー更新

--- a/app/views/profile/index.html.erb
+++ b/app/views/profile/index.html.erb
@@ -118,7 +118,7 @@
             <!-- delete-account modal -->
             <!-- delete account popup modal start-->
   <!-- Modal -->
-  <div class="modal fade" id="deleteaccount" tabindex="-1" role="dialog"
+  <section class="modal fade" id="deleteaccount" tabindex="-1" role="dialog"
     aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
       <div class="modal-content">
@@ -145,7 +145,7 @@
       <% end %>
       </div>
     </div>
-  </div>
+  </section>
   <!-- delete account popup modal end-->
   <!-- delete-account modal -->
 </div>
