--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -115,7 +115,7 @@
 					<div class="container">
 						<div class="row justify-content-center">
 							<div class="col-lg-12 col-md-12 align-content-center">
-              <form action="/search" method="post">
+              <form action="/search" method="get">
                 <div class="form-row">
                   <div class="form-group col-xl-4 col-lg-3 col-md-6">
                     <input type="text" class="form-control my-2 my-lg-1" id="inputtext4" name="query" placeholder="What are you looking for">
